# lib-proc-macro-util

./: Cargo.toml  TODO.md
base/: Cargo.toml
base/src/: lib.rs  macros.rs  supported_languages.rs
base/src/ast/: lifetime.rs  meta.rs  mod.rs  punctuated.rs  type.rs  variable_name.rs  visibility.rs
base/src/ast-old/: lifetime.rs  meta.rs  mod.rs  type.rs
base/src/generating/: generator.rs  into_token_stream.rs  mod.rs  to_tokens.rs
base/src/macros/: attribute.rs  derive.rs  function.rs  mod.rs
base/src/parsing/: buffer.rs  collect_token_stream.rs  error.rs  mod.rs  parse.rs  parser.rs
base/src/tokens/: keyword.rs  mod.rs  punctuation.rs  token.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/to_tokens/: group.rs  list.rs  mod.rs  parse.rs  to_tokens.rs  tree.rs
macros/src/to_tokens/token/: mod.rs  parse.rs
macros/src/to_tokens/token/group/: mod.rs  parse.rs  to_tokens.rs
macros/src/to_tokens/token/to_tokens/: identifier.rs  literal.rs  mod.rs  punctuation.rs  variable.rs
src/: derive.rs  error.rs  keyword.rs  lib.rs  macros.rs
src/ast/: abi.rs  attribute.rs  block.rs  index.rs  label.rs  lifetime.rs  member.rs  mod.rs  punctuated.rs
src/ast/data/: enum.rs  field.rs  fields.rs  fields_named.rs  fields_unnamed.rs  mod.rs  struct.rs  union.rs  variant.rs
src/ast/expression/: array.rs  assign.rs  async.rs  await.rs  block.rs  break.rs  call.rs  cast.rs  closure.rs  const.rs  continue.rs  field.rs  field_value.rs  for_loop.rs  group.rs  if.rs  index.rs  infer.rs  let.rs  literal.rs  loop.rs  macro.rs  method_call.rs  mod.rs  parentheses.rs  path.rs  reference.rs  repeat.rs  return.rs  struct.rs  try.rs  try_block.rs  tuple.rs  unsafe.rs  while.rs  yield.rs
src/ast/generics/: angle_brackets.rs  argument.rs  associated_constant.rs  associated_type.rs  constant_parameter.rs  constraint.rs  lifetime_parameter.rs  mod.rs  parameter.rs  parentheses.rs  type_parameter.rs
src/ast/meta/: list.rs  mod.rs  name_value.rs
src/ast/path/: arguments.rs  mod.rs  segment.rs  seperator.rs
src/ast/pattern/: mod.rs
src/ast/statement/: macro.rs  mod.rs
src/ast/type/: array.rs  group.rs  (+14 more)
src/generating/: generator.rs  to_tokens.rs
src/parsing/: buffer.rs  error.rs  mod.rs  parse.rs  parser.rs
src/tokens/: buffer.rs  group.rs  keyword.rs  macro.rs  mod.rs  punctuation.rs  token_tree.rs
(+1058 files in other folders)
