[workspace]
default-members = ["."]
members = ["base", "macros"]

[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart.ca>"]
edition = "2021"
repository = "https://github.com/shipsimfan/lib-proc-macro-util"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
proc-macro-util-base.path = "base"
proc-macro-util-macros.path = "macros"

i18n = { path = "../lib-i18n", default-features = false, features = [
    'current',
    'std',
] }

[package]
name = "proc-macro-util"
description = "Utilities to make writing procedural macros easier"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
proc-macro-util-base.workspace = true
proc-macro-util-macros.workspace = true
