[package]
name = "proc-macro-util-macros"
description = "Procedural macros for lib-proc-macro-util"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-util-base.workspace = true

i18n-translation.workspace = true
